--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "jquery": "^3.6.4",
     "node-sass": "^8.0.0",
     "sass": "^1.60.0",
     "sass-loader": "^13.2.2",
